--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>deez</title>
+    <title>Get blocked</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -32,14 +32,19 @@
             width: auto;
         }
     }
-    </style>    
+    </style>
 </head>
 
 <body>
 <div>
-    <h1>diez</h1>
-    <p>diez nutz</p>
-    <p>kek</p>
+    <h1>Get blocked</h1>
+    <h2>Go pray</h2>
+    <h3>Do something useful</h3>
+    <h4>You failure</h4>
+    <p>lazy ahh
+        <img src="../image.png" alt=""/> embed fail is crazy 
+    </p>
+
 </div>
 </body>
 </html>
