--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,8 @@
     <h2>Go pray</h2>
     <h3>Do something useful</h3>
     <h4>You failure</h4>
-    <p>lazy ahh
-        <img src="../image.png" alt=""/> embed fail is crazy 
-    </p>
+    <p>lazy ahh</p>
+    <img src="../image.png" alt="embed fail is crazy "/> 
 
 </div>
 </body>
