--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     <h3>Do something useful</h3>
     <h4>You failure</h4>
     <p>lazy ahh</p>
-    <img src="../image.png" alt="embed fail is crazy "/> 
+    <img url="../image.png" alt="embed fail is crazy "/> 
 
 </div>
 </body>
